Fixed #37009 -- Fixed filter action icon alignment in admin changelist.

--- a/django/contrib/admin/static/admin/css/changelists.css
+++ b/django/contrib/admin/static/admin/css/changelists.css
@@ -259,6 +259,11 @@
     border-bottom: 1px solid var(--hairline-color);
 }
 
+#changelist-filter-extra-actions a.viewlink,
+#changelist-filter-extra-actions a.hidelink {
+    background-position: left center;
+}
+
 /* DATE DRILLDOWN */
 
 .change-list .toplinks {
